# bifrost-relayer.rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  rust-toolchain  sonar-project.properties  sonar.projectKey
.cargo/: cargo.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: sonar.yaml
abi/: abi.authority.bifrost.json  abi.authority.external.json  abi.authority.merged.json  abi.blaze.bifrost.json  abi.executor.merged.json  abi.hooks.json  abi.oracle.bifrost.json  abi.registration.bifrost.json  abi.registration_pool.bifrost.json  abi.relay_executive.bifrost.json  abi.relay_queue.bifrost.json  abi.relayer.bifrost.json  abi.socket.bifrost.json  abi.socket.bitcoin.json  abi.socket.external.json  abi.socket.merged.json  abi.socket_queue.bifrost.json  abi.unified.erc20.json  abi.vault.json  abi.vault.merged.json
client/: Cargo.toml
client/cli/: Cargo.toml
client/cli/src/: configs.rs  error.rs  lib.rs  runner.rs
client/cli/tests/: bfc_client_test.rs
client/examples/: test_bfc.rs
client/src/: lib.rs
client/src/bfc/: events.rs  generic.rs  mod.rs
client/src/bfc/handlers/: bfc_outbound_handler.rs  btc_outbound_handler.rs  btc_registration_handler.rs  mod.rs
client/src/bfc/tx/: unsigned_manager.rs
client/src/btc/: block.rs  client.rs  mod.rs
client/src/btc/handlers/: feerate_feeder.rs  inbound.rs  mod.rs  outbound.rs  psbt_signer.rs
client/src/btc/storage/: keypair.rs  mod.rs  pending_outbound.rs  vault_set.rs
client/src/btc/storage/keypair/: kms.rs  mod.rs  password.rs
client/src/eth/: blocks.rs  events.rs  mod.rs  traits.rs  tx.rs  wallet.rs
client/src/eth/contracts/: socket.rs
client/src/eth/handlers/: bridge_relay_handler.rs  btc_registration_handler.rs  cccp_handler.rs  execution_filter.rs  mod.rs  roundup_relay_handler.rs  socket_handler.rs  socket_onflight_handler.rs  socket_queue_poller.rs  socket_relay_handler.rs  vsp_handler.rs
client/src/eth/handlers/v2/: execution_filter.rs  mod.rs  task.rs
client/src/eth/tx/: eip1559_manager.rs  legacy_manager.rs  mod.rs  task.rs
client/src/sol/: ata.rs  client.rs  codec.rs  convert.rs  decoder.rs  ix_builder.rs  mod.rs  pda.rs  registry.rs  slot_manager.rs
client/src/sol/handlers/: inbound.rs  mod.rs  outbound.rs  queue_poller.rs
client/src/solana/: event.rs  mod.rs  traits.rs
client/src/solana/handlers/: inbound.rs  mod.rs
client/src/solana/tx/: mod.rs  solana_manager.rs
client/src/substrate/: mod.rs  traits.rs
client/src/substrate/tx/: extrinsic_manager.rs  mod.rs  unsigned_manager.rs
configs/: abi.erc20.json  abi.oracle.bifrost.json  abi.socket.external.json  abi.unified.coin.json  abi.unified.erc20.json  bifrost-relayer.service.example  bifrost_metadata.scale  cccp-relayer.service.example  config.mainnet.yaml  config.testnet.yaml  entity.relayer.json  entity.relayer.private.template.json
configs/script/: run_bifrost_test_docker.sh
metrics/: Cargo.toml
metrics/src/: lib.rs  prometheus.rs  sentry.rs
monitors/: Cargo.toml
monitors/src/: prometheus.rs
offchain/: Cargo.toml
offchain/src/: lib.rs  price_feeder.rs
offchain/src/oracle/: binance.rs  coingecko.rs  gateio.rs  mod.rs  upbit.rs
offchain/src/price_source/: binance.rs  coingecko.rs  gateio.rs  mod.rs  upbit.rs
periodic/: Cargo.toml
periodic/src/: bitcoin_rollback_verifier.rs  heartbeat_sender.rs  keypair_migrator.rs  keypair_storage_manager.rs  lib.rs  migration_detector.rs  price_deviation_checker.rs  price_feeder.rs  psbt_broadcaster.rs  psbt_signer.rs  pub_key_presubmitter.rs  pub_key_submitter.rs  registration_emitter.rs  roundup_emitter.rs  socket_rollback_emitter.rs  socket_rollback_handler.rs  traits.rs
periodic/src/price_source/: binance.rs  bithumb.rs  chainlink.rs  coinbase.rs  coingecko.rs  exchange_rate.rs  gateio.rs  kucoin.rs  mod.rs  upbit.rs
primitives/: Cargo.toml
primitives/src/: bootstrap.rs  btc.rs  cli.rs  constants.rs  errors.rs  eth.rs  lib.rs  macros.rs  offchain.rs  periodic.rs  socket_event.rs  sol.rs  substrate.rs  traits.rs  tx.rs  tx_manager.rs  utils.rs
primitives/src/constants/: btc.rs  cccp.rs  cli.rs  config.rs  errors.rs  mod.rs  schedule.rs  tx.rs
primitives/src/contracts/: authority.rs  authority_bifrost.rs  authority_external.rs  bitcoin_socket.rs  blaze.rs  btc_registration.rs  chainlink_aggregator.rs  erc20.rs  executor.rs  hooks.rs  mod.rs  oracle.rs  registration_pool.rs  relay_executive.rs  relay_queue.rs  relayer_bifrost.rs  relayer_external.rs  relayer_manager.rs  socket.rs  socket_bifrost.rs  socket_external.rs  socket_queue.rs  unified_btc.rs  vault.rs
relayer/: Cargo.toml  README.md
relayer/src/: cli.rs  main.rs  service.rs  verification.rs
relayer/src/commands/: migrate_keystore_cmd.rs  mod.rs
relayer/src/service_deps/: btc_deps.rs  full_deps.rs  handler_deps.rs  manager_deps.rs  mod.rs  periodic_deps.rs  sol_deps.rs  substrate_deps.rs
relayer/tests/: btc_registration_tests.rs  inbound.rs  mod.rs  outbound.rs  registration.rs  rollback.rs  utils.rs
src/: main.rs  service.rs
