[package]
name = "br-client"
version = "0.1.0"
description = "The client implementation for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
log = { workspace = true }
rand = { workspace = true }
sentry = { workspace = true }
ethers = { workspace = true }
serde_yaml = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
	"signal",
	"rt-multi-thread",
	"parking_lot",
] }
k256 = { workspace = true, features = ["ecdsa"] }
sha3 = { workspace = true }

# Bifrost Relayer
br-primitives = { path = "../primitives", default-features = false }
br-metrics = { path = "../metrics", default-features = false }

# Substrate
sc-service = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
