[package]
name = "br-client"
version = "0.1.0"
description = "The client implementation for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
hex = { workspace = true }
bitcoincore-rpc = { workspace = true }
miniscript = { workspace = true }
log = { workspace = true }
sentry = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
	"signal",
	"rt-multi-thread",
	"parking_lot",
] }
subxt = { workspace = true }
url = { workspace = true }
array-bytes = { workspace = true }
alloy = { workspace = true }
tower = { workspace = true }
eyre = { workspace = true }
aws-sdk-kms = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }

# subs
sc-keystore = { workspace = true }
sp-core = { workspace = true }
sp-application-crypto = { workspace = true }

# Bifrost Relayer
br-primitives = { path = "../primitives", default-features = false }
br-metrics = { path = "../metrics", default-features = false }

# Substrate
sc-service = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
array-bytes = { workspace = true }
aws-config = { workspace = true }
