[package]
name = "br-metrics"
version = "0.1.0"
description = "The monitoring & metric tools for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
lazy_static = { workspace = true }
sentry = { workspace = true }
ethers = { workspace = true }

# Bifrost Relayer
br-primitives = { path = "../primitives", default-features = false }

# Substrate
prometheus-endpoint = { workspace = true }
