[package]
name = "cccp-offchain"
version = "0.1.0"
description = "The offchain implementation for BIFROST relayer"
authors = ["bifrost-platform"]
homepage = "https://thebifrost.io"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/bifrost-platform/cccp-relayer"

[dependencies]
async-trait = "0.1.57"
cccp-primitives = { path = "../primitives" }
ethers = "2.0"
