[package]
name = "cccp-periodic"
version = "0.1.0"
description = "The offchain implementation for BIFROST relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
log = { workspace = true }
sentry = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }

# CCCP
cc-cli = { path = "../client/cli" }
cccp-client = { path = "../client" }
cccp-primitives = { path = "../primitives" }
