[package]
name = "cccp-periodic"
version = "0.1.0"
description = "The offchain implementation for BIFROST relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
log = { workspace = true }
sentry = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }

# CCCP
cc-cli = { path = "../client/cli", default-features = false }
cccp-client = { path = "../client", default-features = false }
cccp-primitives = { path = "../primitives", default-features = false }
