[package]
name = "br-periodic"
version = "0.1.0"
description = "The offchain implementation for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
log = { workspace = true }
sentry = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
alloy = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true }
bitcoincore-rpc = { workspace = true }
subxt = { workspace = true }
array-bytes = { workspace = true }
miniscript = { workspace = true }
eyre = { workspace = true }
sc-service = { workspace = true }

# Bifrost Relayer
br-cli = { path = "../client/cli", default-features = false }
br-client = { path = "../client", default-features = false }
br-primitives = { path = "../primitives", default-features = false }
