[package]
name = "br-primitives"
version = "0.1.0"
description = "The primitives for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
hex = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
ethers = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = [
	"signal",
	"rt-multi-thread",
	"parking_lot",
	"macros",
] }
miniscript = { workspace = true }
subxt = { workspace = true }
bitcoincore-rpc = { workspace = true }
url = { workspace = true }
