[package]
name = "br-primitives"
version = "0.1.0"
description = "The primitives for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
alloy = { workspace = true }
parity-scale-codec = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
	"signal",
	"rt-multi-thread",
	"parking_lot",
	"macros",
] }
miniscript = { workspace = true }
subxt = { workspace = true }
bitcoincore-rpc = { workspace = true }
url = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
secrecy = { workspace = true }
