[package]
name = "cccp-relayer"
version = "0.1.0"
description = "The core rust implementation for BIFROST relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[dependencies]
# General
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }

# CCCP
cc-cli = { path = "../client/cli", default-features = false }
cccp-client = { path = "../client", default-features = false }
cccp-periodic = { path = "../periodic", default-features = false }
cccp-primitives = { path = "../primitives", default-features = false }
cccp-metrics = { path = "../metrics", default-features = false }

# Substrate
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
prometheus-endpoint = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[[bin]]
name = "cccp-relayer"
