[package]
name = "bifrost-relayer"
version = "1.0.2"
description = "The core rust implementation for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[dependencies]
# General
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }

# Bifrost Relayer
br-cli = { path = "../client/cli", default-features = false }
br-client = { path = "../client", default-features = false }
br-periodic = { path = "../periodic", default-features = false }
br-primitives = { path = "../primitives", default-features = false }
br-metrics = { path = "../metrics", default-features = false }

# Substrate
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
prometheus-endpoint = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[[bin]]
name = "bifrost-relayer"
