[package]
name = "bifrost-relayer"
version = "1.1.1"
description = "The core rust implementation for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[dependencies]
# General
base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
	"signal",
	"rt-multi-thread",
	"parking_lot",
] }
miniscript = { workspace = true }
bitcoincore-rpc = { workspace = true }
subxt = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.10.0"
array-bytes = { workspace = true }

# Bifrost Relayer
br-cli = { path = "../client/cli", default-features = false }
br-client = { path = "../client", default-features = false }
br-periodic = { path = "../periodic", default-features = false }
br-primitives = { path = "../primitives", default-features = false }
br-metrics = { path = "../metrics", default-features = false }

# Substrate
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
prometheus-endpoint = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[[bin]]
name = "bifrost-relayer"

[features]
registration-integration = []
inbound-integration = []
outbound-integration = []

