[package]
name = "cc-cli"
version = "0.1.0"
description = "The client CLI module for BIFROST relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
log = { workspace = true }
sentry = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }

# CCCP
cccp-client = { path = "../../client" }
cccp-primitives = { path = "../../primitives" }
cccp-metrics = { path = "../../metrics" }

# Substrate
sc-service = { workspace = true }
sc-utils = { workspace = true }
