[package]
name = "br-cli"
version = "0.1.0"
description = "The client CLI module for Bifrost relayer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
log = { workspace = true }
sentry = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }

# Bifrost Relayer
br-client = { path = "../../client", default-features = false }
br-primitives = { path = "../../primitives", default-features = false }
br-metrics = { path = "../../metrics", default-features = false }

# Substrate
sc-service = { workspace = true }
sc-utils = { workspace = true }
